<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/loginDlgtitle"
        android:textSize="24sp"
        android:textColor="#ffffffff"
        android:textAlignment="center"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:gravity="center"
         />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/dlg_account"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/editUsername"
        android:layout_gravity="center_horizontal"
        android:hint="@string/dlg_account_in"
        android:layout_margin="10dp" />

</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/dlg_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/editPassword"
        android:layout_gravity="center_horizontal"
        android:hint="@string/dlg_password_in"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="5dp" />



    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/spn_usertype_list_prompt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="left" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chooseUsertype"
        android:layout_gravity="center_horizontal"
        android:entries="@array/UserType_list"
        android:prompt="@string/spn_usertype_list_prompt"
        android:spinnerMode="dialog"


/>

</LinearLayout>